[cyrus] FEATBL-1877 Chore: get rid of old storage/repair APIs when we had to sync cyrus and DB content